2016-February-06 Struan Robertson

    * examples/2Methyl_to_Ethane: Added baselines.
		
		* System.cpp, CollisionOperator.cpp: Minor change to reduce redundant messages to output. 

		* Documentation update.

2016-February-06 Struan Robertson

    * Reaction.h/.cpp, Crossing.h, SimpleRRKM.cpp: Removal of crossing plugin base class.

2016-February-06 Struan Robertson

    * WKBCrossing.cpp, LandauZenerCrossing.cpp: Added revised version of system crossing
		classes, now deriving from MicroRateCalculator base class.

		*examples/spin_forbidden_kinetics: Updated to reflect new syntax.

2016-January-30 Struan Robertson

    * Documentation update.

		* examples/: baseline updates.

2016-January-30 Struan Robertson

    * Documentation update.

		* examples/ErrorPropagation/ipropyl_EP.xml: Extended to have multiple stages.

		* System.cpp: Changes to copyright.

		* ErrorPropagation: Minor tidy.

2016-January-28 Chris Morley

	* mesmer1.xsl:Error propagation data added to Fiited Parameters section of
	  Firefox output. Hardwired cm3 molecule s-1  units because other 
	  concentration units converted to molecile cm-3 during input.
	  Should the original units be restored?

	* src/plugins/ErrorPropagation.cpp(WriteOutAnalysis): rate coefficient
	  added to parameters and to XML output.
	    
	* schemas/mesmerPlugins.xsd: schema update

	* examples/ErrorPropagation/ipropyl_EP.xml, src/System.cpp: remove
	deprecated attribute "me:units"." 

src/System.cpp
	* examples/ErrorPropagation/ipropyl_EP.xml

2016-January-17 Struan Robertson

    * Documentation update.

		* examples/ErrorPropagation/ipropyl_EP.xml. New error propagation example.

		* Examples.bat/.sh: Example scripts update.

2016-January-16 Struan Robertson

    * gDensityOfStates.h/.cpp, QMRotor.cpp, ClassicalRotor.cpp, DefinedSumOfStates.cpp: 
		Moved the reading of symmetry number to the classes which use it.

		* ErrorPropagation.cpp: Initial revision of error progagation methods.
